@@ -96,6 +96,8 @@ Version 5.0.9
     errors. (Bug #31433) 
   - improved the speed of load data local infile significantly   
   - fixed MySqlDateTime.ToString() to properly return the date value (Bug #32010)   
+  - fixed problem where string parameters who have their size set after their value could cause exceptions
+    (Bug #32094)  
                     
 Version 5.0.8  8/16/2007
   Bug #28706 Log messages are truncated  
